# my-string-class-in-cpp

./: CMakeLists.txt  README.md
dependencies/include/: String.h
dependencies/lib/: String.cpp
src/: main.cpp
